[error-10] Add for certs and some fixes